# mae-data-gen

./: .gitignore  README.md  pyproject.toml
.omc/state/: last-tool-error.json
configs/: config.yaml
configs/output/: default.yaml
configs/problem/: identity_transport.yaml
configs/sampling/: default.yaml
scripts/: generate.py
src/mae_data_gen/: __init__.py  io.py  mesh.py
src/mae_data_gen/problems/: __init__.py  base.py  identity_transport.py  registry.py
tests/: test_identity_transport.py
